Initial color added to table

--- a/table.html
+++ b/table.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 	<table>
+		<caption>
+			The cities I visited on why segway'n USA travels.
+		</caption>
 		<tr>
 			<th>City</th>		
 			<th>Date</th>	
@@ -25,7 +28,7 @@
 			<td>75</td>
 			<td>1,204ft</td>
 			<td>29,686</td>
-			<td>4/5</td>
+			<td class="right">4/5</td>
 		</tr>
 		<tr>
 			<td>Magic City, ID</td>
@@ -33,7 +36,7 @@
 			<td>74</td>
 			<td>5,312ft</td>
 			<td>50</td>
-			<td>3/5</td>
+			<td class="right">3/5</td>
 		</tr>
 		<tr>
 			<td>Bountiful, UT</td>
@@ -41,7 +44,7 @@
 			<td>91</td>
 			<td>4,226ft</td>
 			<td>41,173</td>
-			<td>4/5</td>
+			<td class="right">4/5</td>
 		</tr>
 		<tr>
 			<td>Last chance, CO</td>
@@ -49,7 +52,7 @@
 			<td>102</td>
 			<td>4,780ft</td>
 			<td>265</td>
-			<td>3/5</td>
+			<td class="right">3/5</td>
 		</tr>
 		<tr>
 			<td>Truth or Consequences, NM</td>
@@ -65,7 +68,7 @@
 			<td>104</td>
 			<td>860ft</td>
 			<td>480</td>
-			<td>3/5</td>
+			<td class="right">3/5</td>
 		</tr>
 
 	</table>
