--- a/journal.html
+++ b/journal.html
@@ -15,15 +15,68 @@
 	<p>
 		Well I made it 1200 miles already, and I passed through some interesting places on the way: 
 	</p>
+    <table>
+        <caption>
+            The cities I visited on why segway'n USA travels.
+        </caption>
+        <tr>
+            <th>City</th>       
+            <th>Date</th>   
+            <th>Temp</th>   
+            <th>Altitude</th>
+            <th>Population</th>
+            <th>Diner Rating</th>   
+        </tr>
+        <tr>
+            <td>Walla Walla, WA</td>
+            <td>June 15th</td>
+            <td>75</td>
+            <td>1,204ft</td>
+            <td>29,686</td>
+            <td>4/5</td>
+        </tr>
+        <tr class="orangeRow">
+            <td>Magic City, ID</td>
+            <td>June 25th</td>
+            <td>74</td>
+            <td>5,312ft</td>
+            <td>50</td>
+            <td>3/5</td>
+        </tr>
+        <tr>
+            <td>Bountiful, UT</td>
+            <td>July 10th</td>
+            <td>91</td>
+            <td>4,226ft</td>
+            <td>41,173</td>
+            <td>4/5</td>
+        </tr>
+        <tr class="orangeRow">
+            <td>Last chance, CO</td>
+            <td>July 23rd</td>
+            <td>102</td>
+            <td>4,780ft</td>
+            <td>265</td>
+            <td>3/5</td>
+        </tr>
+        <tr>
+            <td>Truth or Consequences, NM</td>
+            <td>August 2nd</td>
+            <td>93</td>
+            <td>4,242ft</td>
+            <td>7,289</td>
+            <td>5/5</td>
+        </tr>
+        <tr class="orangeRow">
+            <td>Why, AZ</td>
+            <td>August 18th</td>
+            <td>104</td>
+            <td>860ft</td>
+            <td>480</td>
+            <td>3/5</td>
+        </tr>
 
-	<ol>
-		<li>Walla Walla, WA</li>
-		<li>Magic City, ID</li>
-		<li>Bountiful, UT</li>
-		<li>Last Chance, CO</li>
- 		<li>Truth or Consequences, NM</li>
- 		<li>Why, AZ</li>
-	</ol>
+    </table>
 
     <h2>July 14, 2012</h2>    
     <p>
