Spanning table rows or columns

--- a/journal.html
+++ b/journal.html
@@ -60,12 +60,17 @@
             <td>3/5</td>
         </tr>
         <tr>
-            <td>Truth or Consequences, NM</td>
+            <td rowspan="2">Truth or Consequences, NM</td>
             <td>August 2nd</td>
             <td>93</td>
-            <td>4,242ft</td>
-            <td>7,289</td>
+            <td rowspan="2">4,242ft</td>
+            <td rowspan="2">7,289</td>
             <td>5/5</td>
+        </tr>
+        <tr>
+            <td>August 27th</td>
+            <td>98</td>
+            <td>4/5</td>
         </tr>
         <tr>
             <td>Why, AZ</td>
