--- a/journal.html
+++ b/journal.html
@@ -70,7 +70,18 @@
         <tr>
             <td>August 27th</td>
             <td>98</td>
-            <td>4/5</td>
+            <td>
+                <table>
+                    <tr>
+                       <th>Tess</td>
+                       <td>5/5</td>
+                    </tr>
+                    <tr>
+                        <th>Tony</td>
+                        <td>4/5</td>    
+                    </tr>
+                </table>
+            </td>
         </tr>
         <tr>
             <td>Why, AZ</td>
